# whisper-type

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  run-desktop.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: build-windows.yml
app/: README.md  package-lock.json  package.json
app/src/: index.html  main.js  setup.html  setup.js  styles.css
app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
backend/nestjs/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  nest-cli.json  package-lock.json  package.json  tsconfig.json
backend/nestjs/prisma/: schema.prisma
backend/nestjs/src/: app.module.ts  main.ts
backend/nestjs/src/auth/: api-key.guard.ts  auth.controller.ts  auth.module.ts  auth.service.ts  dashboard-auth.guard.ts
backend/nestjs/src/config/: configuration.ts
backend/nestjs/src/dashboard/: dashboard.controller.ts  dashboard.module.ts
backend/nestjs/src/db/: prisma.service.ts
backend/nestjs/src/health/: health.controller.ts  (+1 more)
backend/wispertype/: __init__.py  config.py  fast_server.py  streaming.py  transcriber.py
poc/: bootstrap_model.py  entrypoint.sh  requirements.txt  serve.py
releases/: README.md
releases/mac/: README.md
releases/windows/: README.md
scripts/: bench_transcribe.py  setup.sh
(+14 files in other folders)
